--- a/trunk/iso2mesh/AUTHORS.txt
+++ b/trunk/iso2mesh/AUTHORS.txt
@@ -16,3 +16,4 @@ Other people had also contributed to this toolbox, they include
 - Hang Si <si at wias-berlin.de>
 - Pierre Alliez <pierre.alliez at sophia.inria.fr>
 - Laurent Rineau <laurent.rineau__CGAL at normalesup.org>
+- Donghyeon Kim <danielkim at gist.ac.kr>
