speed up loadjson, correct quote escaping, append _ for internal fields, add examples
git-svn-id: http://svn.code.sf.net/p/iso2mesh/code/trunk/iso2mesh@310 786e58fb-9377-0410-9ff7-e4ac0ac0635c

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,4 +1,4 @@
-The author of "iso2mesh" toolbox is Qianqian Fang PhD. Dr. Fang
+The author of "iso2mesh" toolbox is Qianqian Fang. Qianqian
 is currently an Instructor at Massachusetts General Hospital, 
 Harvard Medical School.
 
