--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -17,3 +17,5 @@ Other people had also contributed to this toolbox, they include
 - Pierre Alliez <pierre.alliez at sophia.inria.fr>
 - Laurent Rineau <laurent.rineau__CGAL at normalesup.org>
 - Donghyeon Kim <danielkim at gist.ac.kr>
+- Blake Johnson <bjohnso at bbn.com>
+- Niclas Borlin <Niclas.Borlin at cs.umu.se>
