update docs for iso2mesh v1.5.0
git-svn-id: http://svn.code.sf.net/p/iso2mesh/code/trunk/iso2mesh@403 786e58fb-9377-0410-9ff7-e4ac0ac0635c

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -19,3 +19,4 @@ Other people had also contributed to this toolbox, they include
 - Donghyeon Kim <danielkim at gist.ac.kr>
 - Blake Johnson <bjohnso at bbn.com>
 - Niclas Borlin <Niclas.Borlin at cs.umu.se>
+- Peter Varga <peter.varga at charite.de>
