prepare for iso2mesh 1.9 release - Century Egg

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,4 +1,4 @@
-The author of "Iso2mesh" toolbox is Qianqian Fang. 
+The author of "Iso2Mesh" toolbox is Qianqian Fang. 
 Qianqian is currently an Assistant Professor at the
 Department of Bioengineering of Northeastern University.
 
