--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,10 +1,39 @@
 ============================================================================
 
-     Iso2mesh - a compact, powerful yet simple-to-use 3D mesh generator
+     Iso2Mesh - a compact, powerful yet simple-to-use 3D mesh generator
 
 ----------------------------------------------------------------------------
 
-Iso2mesh ChangeLog (key features marked by *):
+Iso2Mesh ChangeLog (key features marked by *):
+
+2018/07/19  (1.9.0, codename: Century Egg - final)
+
+  2018-07-19*[67ae478] update jsonlab to v1.8
+  2018-07-19 [0af072c] compiling jmeshlib and tetgen1.5 from source
+  2018-07-19 [c75ce08] use meshfix 1.2 from an old copy
+  2018-07-18 [f49286b] use system binaries first, then use locally built suffix-less binaries, then prebuilt ones
+  2018-07-18 [8d015f4] add makefile to compile all external tools and copy exe to bin
+  2018-07-18*[17bf732] add source codes for embedded tool for deployment
+  2018-06-27 [2baaf0d] fix bugs in meshinterp and meshremap when elemid contains nan
+  2018-06-26 [3413cf6] add meshremap and meshinterp to map values between a pair of meshes
+  2018-05-30 [f111940] add examples for readnirfast and savenirfast
+  2018-05-30*[6ec9dbc] support importing and exporting NIRFAST mesh files
+  2018-05-25 [312d1ff] nodevolume can be calculated using elemvolume
+  2018-05-02 [39bc663] fix missing command in the meshconn output
+  2018-04-11 [65a0f2a] Update tetgen1.5 executable for Windows to TetGen v1.5.1-beta1
+  2017-11-08*[98d9fb4] add extrudesurf function to expand an open surface into a solid
+  2017-10-02 [9f5e9f1] support cone trunk in meshacylinder
+  2017-09-13 [914d9e9] Fix bug in surf2mesh
+  2017-08-30*[a6070a9] add top and bottom faces for extrudecurve
+  2017-08-06 [6cd2747] merge phong's surfboolean, make s2m/surf2mesh support tetgen1.5
+  2017-07-19 [f6d8d7f] remove isoloated nodes for cell represented surfaces
+  2017-06-29 [4ff9ed9] support removing duplicated nodes in cell face input
+  2017-06-20 [dab6afe] close open surfaces by the bounding box
+  2017-06-20 [059f98a] support initial angle in orthdisk
+  2017-06-12 [5d22c41] apply a patch from Riccardo to correct surface orientation
+  2017-05-29 [48f30d5] update meshfix binary for windows, add 64bit meshfix from https://github.com/MarcoAttene/MeshFix-V2.1/
+  2017-05-11 [d11dbc4] add new function to create extruded surfaces from orthogonal 2D spline curves
+  2017-03-05 [41da47d] create 10-node tet from 4-node tet
 
 2017/01/16  (1.8.0, codename: Deviled Egg - final)
         1.**robust surface boolean operator based on Cork
