update reference, update build requires packages

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,5 +1,5 @@
 The author of "Iso2Mesh" toolbox is Qianqian Fang. 
-Qianqian is currently an Assistant Professor at the
+Qianqian is currently an Associate Professor at the
 Department of Bioengineering of Northeastern University.
 
 Address: Dept. of Bioengineering
