add cgalsurf manual

--- a/tools/manpage/cgalmesh.1
+++ b/tools/manpage/cgalmesh.1
@@ -42,6 +42,6 @@ Lower-bound of the tetrahedron volume (in voxel^3) of the 3D mesh
 \fBrandomseed\fR|(optional, default: -1)
 Random number generator seed (large positive integer, -1 to use system clock)
 .SH SEE ALSO
-cgalsurf(7), cgalsimp2(7), cork(7), meshfix(7), jmeshlib(7)
+cgalsurf(7), cgalsimp2(7), cgalpoly(7), cork(7), meshfix(7), jmeshlib(7)
 .SH AUTHOR
 Qianqian Fang (fangqq@gmail.com) and Peter Varga
