--- a/tools/manpage/cgalsimp2.1
+++ b/tools/manpage/cgalsimp2.1
@@ -27,6 +27,6 @@ that will be decimated. If keepratio is negative, it triggers
 the "LindstromTurk placement" policy; otherwise, it uses a 
 mid-point placement policy by clapsing an edge to its mid-point.
 .SH SEE ALSO
-cgalsurf(7), cgalmesh(7), cork(7), meshfix(7), jmeshlib(7)
+cgalmesh(7), cgalsurf(7), cgalpoly(7), cork(7), meshfix(7), jmeshlib(7)
 .SH AUTHOR
 Qianqian Fang (fangqq@gmail.com), Fernando Cacciola and Andreas Fabri
