--- a/tools/manpage/cork.1
+++ b/tools/manpage/cork.1
@@ -53,6 +53,6 @@ and output the result
 Compute the second mesh in1 cut by the first mesh in0,
 and output the result
 .SH SEE ALSO
-cgalsurf(7), cgalmesh(7), cgalsimp2(7), meshfix(7), jmeshlib(7)
+cgalmesh(7), cgalsurf(7), cgalsimp2(7), cgalpoly(7), meshfix(7), jmeshlib(7)
 .SH AUTHOR
 Gilbert Bernstein and Qianqian Fang (fangqq@gmail.com)
