--- a/tools/manpage/jmeshlib.1
+++ b/tools/manpage/jmeshlib.1
@@ -19,6 +19,6 @@ The input surface mesh in the OFF format
 \fBoutput.off\fR|(required)
 The cleaned surface mesh are saved as output.off
 .SH SEE ALSO
-cgalmesh(7), cgalsurf(7), cgalsimp2(2), cork(7), meshfix(7)
+cgalmesh(7), cgalsurf(7), cgalsimp2(7), cgalpoly(7), cork(7), meshfix(7)
 .SH AUTHOR
 Marco Attene (attene@ge.imati.cnr.it)
