--- a/tools/manpage/meshfix.1
+++ b/tools/manpage/meshfix.1
@@ -105,6 +105,6 @@ If the mesh contains intersections, return value = 1.
 If the mesh contains intersections, return value = 1.
 In addtion, save mesh with highlighted intersections in Gmsh format
 .SH SEE ALSO
-cgalsurf(7), cgalmesh(7), cgalsimp2(7), meshfix(7), jmeshlib(7)
+cgalmesh(7), cgalsurf(7), cgalsimp2(7), cgalpoly(7), cork(7), jmeshlib(7)
 .SH AUTHOR
 Marco Attene (attene@ge.imati.cnr.it), Mirko Windhoff, Axel Thielscher and Qianqian Fang (fangqq@gmail.com)
