--- a/tools/manpage/cgalpoly.1
+++ b/tools/manpage/cgalpoly.1
@@ -41,6 +41,6 @@ Lower-bound of the tetrahedron volume (in voxel^3) of the 3D mesh
 \fBrandomseed\fR|(optional, default: -1)
 Random number generator seed (large positive integer, -1 to use system clock)
 .SH SEE ALSO
-cgalmesh(7), cgalsimp2(7), cork(7), meshfix(7), jmeshlib(7)
+cgalmesh(7), cgalsurf(7), cgalsimp2(7), cork(7), meshfix(7), jmeshlib(7)
 .SH AUTHOR
 Qianqian Fang (fangqq@gmail.com)
